:sparkles: Implement selection endpoints
